Configure mock handler timeout

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -213,6 +213,9 @@ fds: {
             hot_threshold = 3
             /* approx number of times an obj has to be accessed to become cold */
             cold_threshold = 0
+	    /* Mock handler timeout */
+	    mocktimeout = 500
+
         }
         threadpool: {
             max_task    = 10
