--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -40,6 +40,7 @@
 @import '../../scripts/directives/charts/linechart/linechart';
 
 @import '../../scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay';
+@import '../../scripts/directives/widgets/waterfallslider/waterfallslider';
 @import '../../scripts/directives/widgets/statustile/statusTile';
 @import '../../scripts/directives/widgets/slidewindowstack/slidewindowstack';
 @import '../../scripts/directives/widgets/tooltip/tooltip';
