modify simulated latency test for SM

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -185,6 +185,10 @@ fds: {
         test_mode=false
         /* Internal testing related info */
         testing: {
+
+            /* enable simulated latency with its timueout value */
+            enable_mocking = false
+            mocktimeout = 500   
             /* enable if testing SM standalone, no dependency on platform and OM */
             standalone = false
 
