--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -56,13 +56,22 @@ fds: {
             min_thread  = 8
             max_thread  = 10
         }
-    /* Internal testing related info */
-    testing: {
-            /* overwrite node capabilities from this config */
-            manual_nodecap = true
-            disk_iops_max  = 100000
-            disk_iops_min  = 60000
-        }
+        /* Internal testing related info */
+	testing: {
+	    /* overwrite node capabilities from this config */
+	    manual_nodecap = true
+	    disk_iops_max  = 100000
+	    disk_iops_min  = 60000
+	}
+	/* Service layer stanza */
+	svc: {
+	    lftp: {
+		/* Enable lockfree threadpool optimizations or not */
+	        enable = false
+		io_thread_cnt = 2
+		worker_thread_cnt = 2
+	    }
+	}
     }
     dm: {
         perf: {
