Toggle svc layer optimizations by default for perf run.  This can be toggled off incase of stability issues

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -67,7 +67,7 @@ fds: {
 	svc: {
 	    lftp: {
 		/* Enable lockfree threadpool optimizations or not */
-	        enable = false
+	        enable = true 
 		io_thread_cnt = 2
 		worker_thread_cnt = 2
 	    }
