Updates to multi-node deploy in ansible - Fixed some incorrect sysctls - Implement use of fds_node for node name def - Formation cloud deploy updates - Add missing toggle config to platform.conf

--- a/ansible/templates/fdsactivate-init.conf.j2
+++ b/ansible/templates/fdsactivate-init.conf.j2
@@ -6,4 +6,4 @@ env LD_LIBRARY_PATH=/fds/lib:/usr/local/lib:/usr/lib/jvm/java-8-oracle/jre/lib/a
 env PATH=$PATH:/fds/bin 
 chdir /fds/bin
 
-exec fdscli --fds-root /fds/ --activate-nodes abc -k 1 -e sm,dm
+exec fdscli --fds-root /fds/ --activate-nodes abc -k 1 -e am,sm,dm
