--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -285,6 +285,7 @@ fds: {
         testing: {
             /* Toggle stand alone mode */
             toggleStandAlone = false
+						toggleNewPath = false
 
             /* Toggle to disable stats collection for metadata streaming */
             toggleDisableStreamingStats = {{ am_testing_toggleDisableStreamingStats }} 
