--- a/source/java/admin-webapp/src/styles/sass/_mixin.scss
+++ b/source/java/admin-webapp/src/styles/sass/_mixin.scss
@@ -12,6 +12,13 @@
     transition: $scope, $time;
 }
 
+@mixin property-transition( $property, $duration, $timing ){
+    -webkit-transition: $property $duration $timing;
+    -o-transition: $property $duration $timing;
+    -moz-transition: $property $duration $timing;
+    transition: $property $duration $timing;
+}
+
 @mixin rotate( $degrees ){
     -ms-transform: rotate( $degrees + deg); /* IE 9 */
     -webkit-transform: rotate( $degrees + deg); /* Chrome, Safari, Opera */
