--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -67,7 +67,7 @@ fds: {
 	svc: {
 	    lftp: {
 		/* Enable lockfree threadpool optimizations or not */
-	        enable = true 
+	        enable = {{ svc_plat_lftp_enable }}
 		io_thread_cnt = 2
 		worker_thread_cnt = 2
 	    }
