slider widget is now functional

--- a/source/java/admin-webapp/src/scripts/directives/widgets/spinner/_spinner.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/spinner/_spinner.scss
@@ -20,6 +20,11 @@
         &:active &:focus {
             outline: none;
         }
+        
+        &.no-buttons {
+            border-right: 1px solid $gray_border;
+            border-radius: 6px;
+        }
     }
 
     .button-parent {
