--- a/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/_waterfallslider.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/_waterfallslider.scss
@@ -107,6 +107,11 @@ $waterfall-slider-row-height: 38px;
                 &.edit-box {
                     top: -64px;
                 }
+                
+                &.stay-in-screen {
+                    right: 0px;
+                    left: auto !important;
+                }                
             }
             
             .value-display {
@@ -142,7 +147,7 @@ $waterfall-slider-row-height: 38px;
                 border-left: 4px solid transparent;
                 border-right: 4px solid transparent;
                 width: 0px;
-                margin-left: 7px;
+                margin-left: 3px;
                 position: absolute;
                 bottom: -5px;
             }
@@ -155,13 +160,14 @@ $waterfall-slider-row-height: 38px;
                 width: 0px;
                 margin-left: 4px;
                 position: absolute;
+                top: 1px;
                 
                 &.edit-box {
                     border-top-width: 5px;
                     border-left-width: 3px;
                     border-right-width: 3px;
-                    margin-left: 8px;
-                    bottom: -4px;
+                    margin-left: 4px;
+                    top: -2px;
                     border-top-color: #F6F6F6;
                 }
             }
