--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -288,8 +288,10 @@ fds: {
             max_thread  = 15
         }
         cache: {
-            /* Default max entries in a volume's AM cache */
-            default_max_entries =  {{ am_cache_default_max_entries }}
+            /* Default max data entries in a volume's AM cache */
+            max_data_entries =  {{ am_cache_max_data_entries }}
+	    /* Default max entries in a volume's AM cache */
+            max_metadata_entries =  {{ am_cache_max_metadata_entries }}
             /* Default max staged entries in a volume's tx descriptor */
             tx_max_staged_entries = 10
         }
