--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -71,8 +71,13 @@
         <connector-panel ng-model="dataConnector" editable="false"></connector-panel>
     </section>
     
+<!--
     <section class="block-section">
         <snapshot-policy-panel ng-model="snapshotPolicies"></snapshot-policy-panel>
+    </section>
+-->
+    <section class="block-section">
+        <protection-policy-panel ng-model="protectionPolicies"></protection-policy-panel>
     </section>
     
     <section class="block-section">
