--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -77,11 +77,11 @@
     </section>
 -->
     <section class="block-section">
-        <protection-policy-panel ng-model="protectionPolicies"></protection-policy-panel>
+        <protection-policy-panel ng-model="protectionPolicies" save-only="false"></protection-policy-panel>
     </section>
     
     <section class="block-section">
-        <qos-panel ng-model="qos"></qos-panel>
+        <qos-panel ng-model="qos" save-only="false"></qos-panel>
     </section>
     
     <section>
