putting the time selectors in for the timeline

--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -60,3 +60,4 @@
 @import '../../scripts/directives/widgets/priorityslider/priority_slider';
 @import '../../scripts/directives/widgets/variableslider/variable_slider';
 @import '../../scripts/directives/widgets/linkbuttons/linkbuttons';
+@import '../../scripts/directives/fds-components/snapshot-policies/protection-policy';
