--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -315,6 +315,8 @@ fds: {
             uturn_processor_all = false
             /* Forces all AM dispatcher APIs to immediately return success */
             uturn_dispatcher_all = false
+            /* dipatchers timeout in us */
+            uturn_dispatcher_timeout = 200 
             /* Test mode to bypass local catalog cache */
             disable_vcc = true
             /* Forces all AM service APIs to immediately return success */
