--- a/source/config/etc/fds_config_defaults.j2
+++ b/source/config/etc/fds_config_defaults.j2
@@ -24,6 +24,7 @@
 {% set checker_log_severity = fds_log_severity if fds_log_severity is defined else 'trace' %}
 {% set sm_data_verify = fds_sm_data_verify if fds_sm_data_verify is defined else 'true' %}
 {% set sm_data_verify_background = fds_sm_data_verify_background if fds_sm_data_verify_background is defined else 'true' %}
+{% set sm_sync_meta_write = fds_sm_sync_meta_write if fds_sm_sync_meta_write is defined else 'false' %}
 {% set am_cache_max_data_entries = fds_am_cache_max_data_entries if fds_am_cache_max_data_entries is defined else '200' %}
 {% set am_cache_max_metadata_entries = fds_am_cache_max_metadata_entries if fds_am_cache_max_metadata_entries is defined else '200' %}
 {% set sm_cache_default_data_entries = fds_sm_cache_default_data_entries if fds_sm_cache_default_data_entries is defined else '0' %}
