--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -204,6 +204,9 @@ fds: {
             /* this is temporary until we fix platform, we don't want simulated SSDs */
             useSsdForMeta = false
 
+           /* Use sync metadata write if true */
+            syncMetaWrite = {{ sm_sync_meta_write }}
+
             /* General testing mode...should depricate */
             test_mode = false
 
