more test cases

--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -127,6 +127,6 @@
         </div>
     </section>
 
-    <div class="page-vertical-spacer"></div>
+    <div class="page-vertical-spacer view-volume-bottom-element"></div>
     
 </div>
