--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -77,6 +77,10 @@
     </section>
 -->
     <section class="block-section">
+        <tiering-panel ng-model="mediaPolicy"></tiering-policy-panel>
+    </section>
+    
+    <section class="block-section">
         <qos-panel ng-model="qos" save-only="false"></qos-panel>
     </section>
     
