removing the snapshot table and renaming the protection files to timeline

--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -87,7 +87,7 @@
     </section>
     
     <section class="block-section">
-        <protection-policy-panel ng-model="protectionPolicies" save-only="false"></protection-policy-panel>
+        <timeline-policy-panel ng-model="timelinePolicies" save-only="false"></timeline-policy-panel>
     </section>
     
     <section>
@@ -97,6 +97,7 @@
         </div>
     </section>
     
+<!--
     <section class="block-section">
         <div class="section-header">
             <span class="header" translate>volumes.l_snapshots</span>
@@ -132,6 +133,7 @@
             <div class="gutter"></div>
         </div>
     </section>
+-->
 
     <div class="page-vertical-spacer view-volume-bottom-element"></div>
     
