adding the timeline cloning widget

--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -54,6 +54,7 @@
 @import '../../scripts/directives/angular-fui/fui-checkbox/fui-checkbox';
 @import '../../scripts/directives/angular-fui/fui-dropdown/fui-dropdown';
 @import '../../scripts/directives/angular-fui/fui-slider/fui-slider';
+@import '../../scripts/directives/widgets/timeslider/timeslider';
 @import '../../scripts/directives/angular-fui/fui-input/fui-input';
 @import '../../scripts/directives/widgets/buttonbar/buttonbar';
 @import '../../scripts/directives/widgets/navitem/navitem';
