--- a/cosbench/workloads/s3-0006.xml.j2
+++ b/cosbench/workloads/s3-0006.xml.j2
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<workload name="s3-sample" description="sample benchmark for s3">
+<workload name="0007" description="2 buckets ; 20 objects ; 8 workers ; 30 seconds ; 80r/20w ; c(64)KB">
 
   <auth type="none" config=""/>
 	<storage type="s3" config="path_style_access=true;accesskey={{ username }};secretkey={{ secretkey }};endpoint={{ s3_url }}" />
