--- a/cosbench/workloads/s3-1001.xml.j2
+++ b/cosbench/workloads/s3-1001.xml.j2
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<workload name="s3-sample" description="sample benchmark for s3">
+<workload name="s3-1001" description="Soak:10 buckets ; 20 objects ; 12 hours ; 20r/80w ; u(64,1024)KB">
 
   <auth type="none" config=""/>
 	<storage type="s3" config="path_style_access=true;accesskey={{ username }};secretkey={{ secretkey }};endpoint={{ s3_url }}" />
