--- a/cosbench/workloads/s3-0006.xml.j2
+++ b/cosbench/workloads/s3-0006.xml.j2
@@ -15,7 +15,7 @@
     </workstage>
 
     <workstage name="main">
-      <work name="main" workers="8" runtime="30">
+      <work name="main" workers="8" runtime="30" afr="10000">
         <operation type="read" ratio="80" config="cprefix=s3testqwer;containers=u(1,2);objects=u(1,10)" />
         <operation type="write" ratio="20" config="cprefix=s3testqwer;containers=u(1,2);objects=u(11,20);sizes=c(64)KB" />
       </work>
