--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -55,6 +55,8 @@
 @import '../../scripts/directives/angular-fui/fui-dropdown/fui-dropdown';
 @import '../../scripts/directives/angular-fui/fui-slider/fui-slider';
 @import '../../scripts/directives/widgets/timeslider/timeslider';
+@import '../../scripts/directives/widgets/timespinner/timespinner';
+@import '../../scripts/directives/widgets/datepicker/datepicker';
 @import '../../scripts/directives/angular-fui/fui-input/fui-input';
 @import '../../scripts/directives/widgets/buttonbar/buttonbar';
 @import '../../scripts/directives/widgets/navitem/navitem';
