adding a date time typer and an apply feature to eliminate jumping boxes

--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -57,6 +57,7 @@
 @import '../../scripts/directives/widgets/timeslider/timeslider';
 @import '../../scripts/directives/widgets/timespinner/timespinner';
 @import '../../scripts/directives/widgets/datepicker/datepicker';
+@import '../../scripts/directives/widgets/datetimetyper/datetimetyper';
 @import '../../scripts/directives/angular-fui/fui-input/fui-input';
 @import '../../scripts/directives/widgets/buttonbar/buttonbar';
 @import '../../scripts/directives/widgets/navitem/navitem';
