--- a/source/java/admin-webapp/src/scripts/directives/widgets/timeslider/_timeslider.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/timeslider/_timeslider.scss
@@ -90,16 +90,17 @@
         
         .label-parent {
             position: absolute;
+            
+            .text {
+                position: relative;
+                font-size: 11px;
+            }
         }
         
         .tick {
             width: 2px;
             height: 10px;
             background-color: $text_very_light_color;
-        }
-        
-        .text {
-            font-size: 11px;
         }
     }
     
