adding new colors and i18n to the performance chart

--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -38,6 +38,7 @@
 @import 'account/index';
 
 @import '../../scripts/directives/charts/linechart/linechart';
+@import '../../scripts/directives/charts/stackedlinechart/stackedlinechart';
 
 @import '../../scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay';
 @import '../../scripts/directives/widgets/waterfallslider/waterfallslider';
