volume page styling and fixing repercautions

--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -8,7 +8,7 @@
 
     <section class="block-section">
         <div class="section-header">
-            <span class="header" translate>volumes.l_volume_name</span>
+            <span class="sub-header" translate>volumes.l_volume_name</span>
         </div>
         
         <div class="main-value volume-name">{{thisVolume.name}}</div>
