--- a/source/java/admin-webapp/src/styles/sass/_base.scss
+++ b/source/java/admin-webapp/src/styles/sass/_base.scss
@@ -101,7 +101,7 @@ li:active, li:focus, a:active, a:focus {
 }
 
 .form-control {
-    border: 1px solid $text_very_light_color;
+    border: 1px solid #A9A9A9;
 
     &:focus {
         border-color: $fds_extra_light_green
@@ -140,6 +140,10 @@ input.form-control {
     text-decoration: underline;
 }
 
+.light-underline{
+    border-bottom: 1px solid $text_very_light_color;
+}
+
 .std-transition {
     @include transition( linear, 200ms );
 }
@@ -154,6 +158,7 @@ input.form-control {
 .btn {
 
     color: white;
+    border-radius: 3px;
 
     &.btn-primary {
         background-color: $button_primary;
