--- a/source/java/admin-webapp/src/styles/sass/_variables.scss
+++ b/source/java/admin-webapp/src/styles/sass/_variables.scss
@@ -1,10 +1,11 @@
 $base_bg_color: #FFFFFF;
 
 $header_color: #3A424F;
+$table_header_color: #717171;
 $sub_header_color: #EBEBEB;
 $widget_color: #4C4C4C;
 $default_text_color: black;
-$text_light_color: #74757B;
+$text_light_color: #3A3A3A;
 $text_very_light_color: #A0A0A0;
 $text_link_color: #0079FF;
 
@@ -14,8 +15,10 @@ $dark_border: #444444;
 $highlight_color: #2486F8;
 $highlight_text_color: white;
 
-$button_primary: #2486F8;
-$button_primary_hover: #59A6FF;
+$button_primary: #428BCA;
+$button_primary_hover: #006FCF;
+$button_primary_border: #357EBD;
+$button_primary_border_hover: #0064BA;
 $button_secondary: #878787;
 $button_secondary_hover: #aaaaaa;
 $button_secondary_active: #bababa;
