--- a/source/java/admin-webapp/src/styles/sass/components/_tables.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_tables.scss
@@ -9,6 +9,7 @@ table.default {
     width: 100%;
     border-style: hidden;
     border-collapse: collapse;
+    border-spacing: 8px;
     background: #fff;
     font-size: 0.9em;
 //    border-top: 1px solid $text_very_light_color;
@@ -16,15 +17,23 @@ table.default {
     thead {
         th {
             vertical-align: bottom;
-            padding: 2em $side_padding 0.3em;
-            border-bottom: 1px solid $text_very_light_color;
-            border-top: 1px solid $text_very_light_color;
+//            border-bottom: 1px solid $text_very_light_color;
+//            border-top: 1px solid $text_very_light_color;
             text-align: left;
-            font-size: .9em;
+            font-size: 13px;
             font-weight: normal;
-            color: $text_very_light_color;
-            line-height: 1.2em;
+            color: $table_header_color;
+            line-height: 19px !important;
 
+            div {
+                background-color: $sub_header_color;
+                padding: 4px;
+                padding-right: 10px;
+                padding-left: 10px;
+                border-radius: 6px;
+                margin: 4px;
+            }
+            
             input[type="checkbox"] {
                 vertical-align: middle;
             }
@@ -40,8 +49,14 @@ table.default {
     }
 
     td {
-        padding: .7em $side_padding;
+//        padding: .7em $side_padding;
         vertical-align: middle;
+        padding: 4px;
+        padding-left: 16px;
+        padding-right: 16px;
+        color: $text_light_color;
+        font-size: 14px;
+        line-height: 16px;
         
         &.pad {
             padding-left: 12px;
@@ -50,7 +65,11 @@ table.default {
     }
 
     tr {
-        border-bottom: 1px solid $text_very_light_color;
+        
+        &.odd-row {
+            background-color: #ECECEC;
+        }
+//        border-bottom: 1px solid $text_very_light_color;
         
 //        &.no-border {
 //            border-bottom: 0px;
