adding sorting and searching

--- a/source/java/admin-webapp/src/styles/sass/components/_page_defaults.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_page_defaults.scss
@@ -19,6 +19,10 @@ $page-padding: 0px;
     color: $text_very_light_color;
 }
 
+.tall-icon-fix {
+    top: 10px !important;
+}
+
 .page-vertical-spacer {
     height: 20px;
 }
