--- a/source/java/admin-webapp/src/styles/sass/components/_tables.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_tables.scss
@@ -45,6 +45,13 @@ table.default {
             &.no-top-padding {
                 padding-top: 2px;
             }
+            
+            &.selected {
+                div {
+                    background-color: #657D95;
+                    color: #ffffff;
+                }
+            }
         }
     }
 
