--- a/source/java/admin-webapp/src/styles/sass/fonts/icomoon/_icomoon.scss
+++ b/source/java/admin-webapp/src/styles/sass/fonts/icomoon/_icomoon.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('/fonts/icomoon.eot?opypy5');
-	src:url('/fonts/icomoon.eot?#iefixopypy5') format('embedded-opentype'),
-		url('/fonts/icomoon.woff?opypy5') format('woff'),
-		url('/fonts/icomoon.ttf?opypy5') format('truetype'),
-		url('/fonts/icomoon.svg?opypy5#icomoon') format('svg');
+	src:url('/fonts/icomoon.eot?-jppk4q');
+	src:url('/fonts/icomoon.eot?#iefix-jppk4q') format('embedded-opentype'),
+		url('/fonts/icomoon.woff?-jppk4q') format('woff'),
+		url('/fonts/icomoon.ttf?-jppk4q') format('truetype'),
+		url('/fonts/icomoon.svg?-jppk4q#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,69 +23,99 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+	content: "\e616";
+}
+
+.icon-star:before {
+	content: "\e617";
+}
+
 .icon-excellent:before {
 	content: "\e607";
 }
+
 .icon-issues:before {
 	content: "\e610";
 }
+
 .icon-nothing:before {
 	content: "\e611";
 }
+
 .icon-warning:before {
 	content: "\e612";
 }
+
 .icon-storage:before {
 	content: "\e608";
 }
+
 .icon-volume:before {
 	content: "\e60b";
 }
+
 .icon-firebreak:before {
 	content: "\e60a";
 }
+
 .icon-performance:before {
 	content: "\e60e";
 }
+
 .icon-presets:before {
 	content: "\e60c";
 }
+
 .icon-clone:before {
 	content: "\e60d";
 }
+
 .icon-edit:before {
 	content: "\e60f";
 }
+
 .icon-snapshot:before {
 	content: "\e614";
 }
+
 .icon-duplicate:before {
 	content: "\e615";
 }
+
 .icon-delete:before {
 	content: "\e613";
 }
+
 .icon-activity:before {
 	content: "\e604";
 }
+
 .icon-tenant:before {
 	content: "\e609";
 }
+
 .icon-system:before {
 	content: "\e600";
 }
+
 .icon-inbox:before {
 	content: "\e603";
 }
+
 .icon-volumes:before {
 	content: "\e602";
 }
+
 .icon-nodes:before {
 	content: "\e606";
 }
+
 .icon-users:before {
 	content: "\e601";
 }
+
 .icon-admin:before {
 	content: "\e605";
 }
+
