fixing for firefox and others

--- a/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
+++ b/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
@@ -1,7 +1,5 @@
-.header.volumes {
-//  padding-left: 15px;
-//  padding-right: 15px;
-  color: $text_very_light_color;
+.volumes {
+    clear: both;
 }
 
 .volumeparent {
