color changes to accept the new blue

--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
@@ -16,7 +16,7 @@
     border: 1px solid $text_very_light_color !important;
 
     .btn:hover, .btn:focus {
-        border-color: $fds_dark_green;
+        border-color: $button_primary_hover;
     }
 }
 
