--- a/source/java/admin-webapp/src/scripts/directives/widgets/slider/_slider.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/slider/_slider.scss
@@ -47,7 +47,7 @@
         position: absolute;
         top: 42px;
         height: 8px;
-        background-color: $fds_dark_green;
+        background-color: $button_primary;
         border-right: 1px solid black;
     }
     
