--- a/source/config/etc/fds_config_defaults.j2
+++ b/source/config/etc/fds_config_defaults.j2
@@ -34,5 +34,7 @@
 {% set am_testing_toggleDisableStreamingStats = fds_am_testing_toggleDisableStreamingStats if fds_am_testing_toggleDisableStreamingStats is defined else 'false' %}
 {% set svc_plat_lftp_enable = fds_svc_plat_lftp_enable if fds_svc_plat_lftp_enable is defined else 'false' %}
 {% set am_host = am_host if am_host is defined else 'localhost' %}
+{% set snmp_targetip = fds_snmp_targetip if fds_snmp_targetip is defined else 'localhost' %}
+{% set snmp_community = fds_snmp_community if fds_snmp_community is defined else 'public' %}
 {% block content %}{% endblock %}
 
