--- a/source/test/formation.conf.j2
+++ b/source/test/formation.conf.j2
@@ -1,7 +1,7 @@
 {% extends 'fds_config_defaults.j2' %}
 {% block content %}
 {% set node_counter = 1 %}
-{% set om_node = 1 %}
+{% set om_node = [1] %}
 #
 # Copyright 2014 Formation Data Systems, Inc.
 #
@@ -14,9 +14,13 @@ password        = {{ ssh_password }}
 #
 
 {% for host in groups[group_names[0]] %}
-[node{{ node_counter }}]
+{% if node_num is defined %}
+[node{{ hostvars[host]['node_num'] }}] 
+{% else %}
+[node01] 
+{% endif %}
 {% if host == om_host %}
-{% set om_node = node_counter %}
+{% set _ = om_node.append(shortname) %}
 {% endif %}
 {% set node_counter = node_counter + 1 %}
 {{ 'om    ' if host == om_host else 'enable' }}          = true
@@ -28,5 +32,9 @@ fds_root        = /fds
 [sh1]
 # Client uses blk services
 blk             = false
-fds_node        = node{{ om_node }}
+{% if node_num is defined %}
+fds_node        = node{{ hostvars[om_host]['node_num'] }}
+{% else %}
+fds_node        = node01
+{% endif %}
 {% endblock %}
