--- a/source/java/admin-webapp/src/scripts/directives/widgets/buttonbar/_buttonbar.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/buttonbar/_buttonbar.scss
@@ -15,7 +15,7 @@ $buttonbar_border_radius: 5px;
         padding-right: 8px;
         padding-left: 8px;     
         
-        border: 1px solid $text_very_light_color;
+        border: 1px solid $button_primary_border;
         border-right-width: 0px;
         
         &:hover {
