Fix empty stanza new platform.conf that java dislikes
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -23,18 +23,26 @@ fds: {
     feature_toggle: {
         common: {
             enable_multi_om_support = {{ ft_common_enable_multi_om_support }}
+
+            java_is_fussy_evidentally_an_entry_must_exist_here = true
         }
         plat: {
             use_disk_hints = {{ ft_platform_use_disk_hints }}
             force_simulation_mode = {{ ft_platform_force_simulation_mode }}
+
+            java_is_fussy_evidentally_an_entry_must_exist_here = true
         }
         dm: {
+            java_is_fussy_evidentally_an_entry_must_exist_here = true
         }
         sm: {
+            java_is_fussy_evidentally_an_entry_must_exist_here = true
         }
         am: {
+            java_is_fussy_evidentally_an_entry_must_exist_here = true
         }
         om: {
+            java_is_fussy_evidentally_an_entry_must_exist_here = true
         }
     }
 
