adding firebreak stuff to the volume list

--- a/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
+++ b/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
@@ -119,6 +119,10 @@ table.volumes {
       margin: 0 15px;
     }
   }
+    
+  td.firebreak {
+      text-align: center;
+  }
 
   td.usage {
     width: 8em;
